# dragon-book

./: .gitignore  CMakeLists.txt  README.md  shell.nix  simple_translator.cpp
src/: CMakeLists.txt  main.cpp  translator.cpp  translator.h
src/lexer/: CMakeLists.txt  README.md  float.cpp  float.h  lexer.cpp  lexer.h  number.cpp  number.h  tags.h  token.cpp  token.h  word.cpp  word.h
src/parser/: CMakeLists.txt  README.md  main.cpp  parser.cpp  parser.h
src/symbol_table/: CMakeLists.txt  env.cpp  env.h  symbol.h
